// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint renders RTL styling 1`] = `
<div
  className="c-chk__hint is-rtl "
  data-garden-id="checkboxes.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders default styling 1`] = `
<div
  className="c-chk__hint "
  data-garden-id="checkboxes.hint"
  data-garden-version="version"
/>
`;
